# moreader-android

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  debug.keystore  generate_docs.py  gradle.properties  gradlew  keystore.properties  llama.cpp  moreader.keystore  settings.gradle.kts  墨阅Moreader_使用说明书.docx  墨阅Moreader_源代码.docx
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: hanzi_dict.db
app/src/main/cpp/: CMakeLists.txt  llama-local-ai.cpp
app/src/main/java/com/moreader/app/: LibraryScreen.kt  LibraryViewModel.kt  MainActivity.kt  ReaderScreen.kt  ReaderViewModel.kt  ReaderViewModelFactory.kt
app/src/main/java/com/moyue/: LibraryScreen.kt  LibraryViewModel.kt  MainActivity.kt  ReaderScreen.kt  ReaderViewModel.kt  ReaderViewModelFactory.kt
app/src/main/java/com/moyue/data/: BookDao.kt  BookDatabase.kt  BookRepository.kt  BookmarkDao.kt  FlashcardDataStore.kt  HighlightDao.kt  Migrations.kt  VocabularyDao.kt
app/src/main/java/com/moyue/reader/: EpubWebView.kt
app/src/main/java/com/moyue/sync/: SyncClient.kt
app/src/main/java/com/moyue/translate/: TranslationService.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/tingshu/res/values/: strings.xml
assets/: moreader-v2.3.1.apk  moreader-v2.4.0.apk
docs/: dictionary-integration.md
(+42 files in other folders)
